DATA-1384: Added user mobile number and email details to OKYC docs (#160)
* added changes related to user email and phone to OKYC api docs

* updated response schema

* small change to okyc docs

* added info about purging data

* added purge info callout

* added line break

---------

Co-authored-by: Ian Fernandes <ianfernandes@SETUMACB081.local>

--- a/content/data/okyc/api-integration.mdx
+++ b/content/data/okyc/api-integration.mdx
@@ -494,6 +494,12 @@ You may also let your customer receive a new OTP by calling the <strong>Verify O
               <hr className="tertiary" />
               <h5>Response</h5>
               <p>If the value of the <code>shareCode</code> is incorrect, the <code>status</code> associated with this OKYC request <code>id</code> will remain in <code>incomplete</code> state. Please retry the API to move the <code>status</code> to <code>complete</code>.</p>
+              <p>If the unmasked phone and email of the user are available from UIDAI, we return it in the <code>userProfile</code> field of the response. <code>userProfile</code> contains 
+              two fields, <code>unmaskedPhone</code> and <code>unmaskedEmail</code>. </p>
+              <Callout type="warning">
+                Note: userProfile data will be purged after 24 hours.
+              </Callout>
+              <br />
               <CodeBlockWithCopy language="json">
                 {`{ 
   "aadhaar": { 
@@ -519,6 +525,10 @@ You may also let your customer receive a new OTP by calling the <strong>Verify O
     "name": "Jignesh Gurjar", 
     "phone": "09c91184c1d610282d661dd63d257e3b44446853fb1388c9d5b", 
     "photo": "/9j/4AAQSkZJRgABAgAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKD==", 
+    "userProfile": {
+      "unmaskedEmail": "abc@def.com",
+      "unmaskedPhone": "9999999999"
+    },
     "verified": { 
       "email": false, 
       "phone": false, 
@@ -692,6 +702,12 @@ Possible values for `status`, received as part of the response—
                 all customer KYC details included in the XML, and the URL for
                 the zip file.
               </p>
+              <p>If the unmasked phone and email of the user are available from UIDAI, we return it in the <code>userProfile</code> field of the response. <code>userProfile</code> contains 
+              two fields, <code>unmaskedPhone</code> and <code>unmaskedEmail</code>. If both are not available, userProfile will be an empty dictionary.</p>
+              <Callout type="warning">
+                Note: userProfile data will be purged after 24 hours.
+              </Callout>
+              <br />
               <CodeBlockWithCopy language="json">
                 {`{ 
   "aadhaar": { 
@@ -717,6 +733,10 @@ Possible values for `status`, received as part of the response—
         "name": "Jignesh Gurjar", 
         "phone": "09c91184c1d610282d661dd63d257e3b44446853fb1388c9d5b", 
         "photo": "/9j/4AAQSkZJRgABAgAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKD==", 
+        "userProfile": {
+          "unmaskedEmail": "abc@def.com",
+          "unmaskedPhone": "9999999999"
+        },
         "verified": { 
               "email": false, 
               "phone": false, 
