Updates to AA docs

--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -9,11 +9,15 @@ visible_in_sidebar: true
 
 Get users' consent before you can start pulling their financial data with Setu AA by initiating Consent flow in your application. This flow broadly consists of two parts:
 
-1.  **Create Consent Request**—this is essentially a one-time data request that your user needs to approve. To know more details about this please visit [Consent Object](/data/account-aggregator/consent-object) page.
+1.  **Create consent request** — This is essentially a one-time data request that your user needs to approve. To know more details about this please visit [Consent Object](/data/account-aggregator/consent-object) page. Once a consent is created, you will receive a unique `id` with `status = PENDING`, along with a `url` where you can **redirect your customer to consent approval screens**, to review the data request. Here, the user may approve or reject the request
 
--   Once a consent is created, you will receive a unique `id` with `status = PENDING`, along with a `url` where you can **redirect your customer to consent manager screens**, to review the data request. Here, the user may approve or reject the request
+2.  **Consent status** — You can track the consent status with Get Consent Status API, alternatively Setu will notify you when the user has acted upon the consent request. See [Notifications](/data/account-aggregator/api-integration/notifications) to configure your notification endpoint.
 
-2. **Consent Request status**—You can track the consent status with Get Consent Status API, alternatively Setu will notify you when the user has acted upon the consent request. See [Notifications](/data/account-aggregator/api-integration/notifications) to configure your notification endpoint.
+Here are some more advanced features related to consents, which are explained in detail at the end.
+
+1. **Multi consents** — Merge two consents into a single UI flow, with its own unique dual consent ID.
+
+2. **Revoke a consent** — A revoke API for FIUs to withdraw or manually revoke an end users' consent for any purpose or on behalf of the customer
 
 <hr class="primary" />
 
@@ -51,8 +55,7 @@ Call this API to create a consent request. The details of the request will be pr
                                 Consent gets created with a unique identifier{" "}
                                 <code>id</code> with status as{" "}
                                 <code>PENDING</code>. Redirect your customers to
-                                consent manager <code>url</code> to initiate
-                                consent review flow.
+                                consent approval flow <code>url</code> to review the consent.
                             </p>
                             <CodeBlockWithCopy language="json">
                                 {`{
@@ -154,16 +157,16 @@ Call this API to create a consent request. The details of the request will be pr
                     ),
                 },
             ]}
-        ></Tabs>
+        />
     </Portion>
 
 </Row>
 
 <hr class="primary" />
 
-### Consent Review by customer
+### Consent review by customer
 
-On redirecting your users to `url`, it opens up a Consent Manager that permits consent approval/rejection. This url can easily be embedded as a webview or be used to redirect from a website. The URL is of the form:
+On redirecting your users to `url`, it opens up a Consent approval flow that permits consent approval/rejection. This url can easily be embedded as a webview or be used to redirect from a website. The URL is of the form:
 
 `https://<fiu-base-url>/consents/webview/<id>`
 
@@ -191,15 +194,16 @@ The following steps are handled by Setu’s screens—
 
 Call this API to get the consent details and the updated status of a consent request by passing its unique `id`.
 
-If the consent is approved, the Status in the response will be `ACTIVE`. After this, you can now initiate Data flow for the approved consent request.
+If the consent is approved, the status in the response will be `ACTIVE`. After this, you can now initiate Data flow for the approved consent request.
 
 <Callout type="highlight">
-    <strong>Additionally</strong>, Setu AA will notify you on the consent status
-    update by sending a webhook notification to the configured endpoint you
-    entered on the Bridge. See more details on{" "}
+    Additionally, Setu AA will notify you on the consent status update by
+    sending a webhook notification to the configured endpoint you entered on the
+    Bridge. See more details on{" "}
     <a href="/data/account-aggregator/api-integration/notifications">
         Consent Notifications
     </a>
+    .
 </Callout>{" "}
 
 <br />
@@ -356,7 +360,140 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
                     ),
                 },
             ]}
-        ></Tabs>
+        />
     </Portion>
 </Row>
+
+<hr class="primary" />
+
+### Multi consents
+
+In the Account Aggregator (AA) ecosystem in India, the multi consent feature allows Financial Information Users (FIUs) to streamline the process of obtaining consent from customers for data sharing. By merging multiple separate consent requests into a single flow, FIUs can enhance the user experience, reduce friction, and ensure higher completion rates for consent acquisition.
+
+<Callout type="tip">
+    Currently, the multi consent feature supports merging only two consents into
+    a multi consent
+</Callout>
+
+<br />
+
+<img src="https://storage.googleapis.com/strapi-assets/latest/dual-consent-approval-page/dual-consent-approval-page.png" />
+
+##### Features
+
+-   **Single UI Flow** — Merges two consent requests into a single UI flow, displaying the consent parameters of each request in a consolidated manner.
+
+-   **Optional and mandatory consents** — Offers flexibility in making one of the consents optional, while the other remains mandatory, allowing customers to choose which data they are willing to share.
+
+-   **Unified OTP authentication** — Simplifies the authentication process by requiring only a single set of OTP authentications for the multi consent flow.
+
+<br />
+
+##### Create multi consent API
+
+-   Create individual consent requests — Prior to using the Dual consent API, create the individual consent requests as per the standard procedure in the AA ecosystem.
+
+-   Create multi consent — Use the provided API endpoint to create a multi consent process by specifying which consents are optional and which are mandatory.
+
+-   Redirecting the customer to consent approval — On success, direct the customer to the redirectUrl for consent approval.
+
+-   Get consent status — Monitor the status of each consent through the same **Get Consent API**, that is used for a single consent.
+
+###### Request
+
+<table>
+    <tbody>
+        <tr>
+            <th>Base URL</th>
+            <td>
+                Sandbox: <code>https://fiu-sandbox.setu.co</code>
+                <br />
+                Production: <code>https://fiu-unified.setu.co</code>
+            </td>
+        </tr>
+        <tr>
+            <th>Path</th>
+            <td>
+                <code>/v2/consents/consents/collection</code>
+            </td>
+        </tr>
+        <tr>
+            <th>Method</th>
+            <td>
+                <code>POST</code>
+            </td>
+        </tr>
+        <tr>
+            <th>Headers</th>
+            <td>
+                <code>Content-Type</code>: <code>application/json</code> <br />
+                <code>Authorization</code>: Bearer <code>access_token</code> <br />
+                <code>x-product-instance-id</code>:{" "}
+                <code>product-instance-id</code>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<br />
+
+###### Sample Request body
+
+<CodeBlockWithCopy language="json">
+    {`{
+    "optionalConsents": [],
+    "mandatoryConsents": ["36c34bbc-9408-454e-a80e-e44f4fc4cdbf", "037801eb-923e-4592-80cc-b05cecaedba1"]
+}`}
+</CodeBlockWithCopy>
+
+<Callout type="warning">
+    At least one consent must be marked as mandatory to create a multi consent
+</Callout>
+
+<br />
+
+###### Sample Response
+
+<Row>
+    <Portion desktopSpan="whole">
+        <Tabs
+            tabs={[
+                {
+                    key: "1",
+                    label: <Badge type="success">SUCCESS</Badge>,
+                    content: (
+                        <>
+                            <h5>Response</h5>
+                            <CodeBlockWithCopy language="json">
+                                {`{
+    "consentCollectionId": "5f3a5564-9abc-48f9-ae32-af4b22c781ce",
+    "url": "https://fiu-sandbox.setu.co/v2/consents/webview/5f3a5564-9abc-48f9-ae32-af4b22c781ce",
+    "txnid": "6aeb84aa-b078-4ab1-bdb6-fa0e82b18bb3",
+    "traceId": "b3f26ccb-a64d-4692-a02e-282bd8ef7778"
+}`}
+                            </CodeBlockWithCopy>
+                        </>
+                    ),
+                },
+                {
+                    key: "2",
+                    label: <Badge type="failure">FAIL</Badge>,
+                    content: (
+                        <>
+                            <h5>Response</h5>
+                            <CodeBlockWithCopy language="json">
+                                {`{
+    "traceId": "ec754b36-bf5f-4673-8be1-9d203d374c83",
+    "errorCode": "InvalidRequest",
+    "errorMsg": "Consent doesn't belong to same customer id"
+}`}
+                            </CodeBlockWithCopy>
+                        </>
+                    ),
+                },
+            ]}
+        />
+    </Portion>
+</Row>
+
 <WasPageHelpful />
