--- a/content/data/account-aggregator/licenses-and-go-live/participants-in-aa.mdx
+++ b/content/data/account-aggregator/licenses-and-go-live/participants-in-aa.mdx
@@ -7,196 +7,12 @@ visible_in_sidebar: true
 
 ## Participants in the Account Aggregator ecosystem
 
-This page provides a list of all the entities that are at various stages of implementation.
-
-<br />
-
-### Live FIPs and FIUs
-
-| Sr. No | Entity name                                        | Regulatory Type               | AA implementation stage |
-| ------ | -------------------------------------------------- | ----------------------------- | ----------------------- |
-| 1      | Axis Bank                                          | Bank                          | Live                    |
-| 2      | Federal Bank                                       | Bank                          | Live                    |
-| 3      | Union Bank of India                                | Bank                          | Live                    |
-| 4      | HDFC Bank                                          | Bank                          | Live                    |
-| 5      | ICICI Bank                                         | Bank                          | Live                    |
-| 6      | IDFC First Bank                                    | Bank                          | Live                    |
-| 7      | IndusInd Bank                                      | Bank                          | Live                    |
-| 8      | Karur Vysya Bank (KVB)                             | Bank                          | Live                    |
-| 9      | IIFL (India Infoline Finance)                      | NBFC                          | Live                    |
-| 10     | Alice Blue Financial Services Pvt Ltd              | Stock Broker                  | Live                    |
-| 11     | DMI Finance Pvt Ltd                                | NBFC                          | Live                    |
-| 12     | Lendingkart Finance Limited                        | NBFC                          | Live                    |
-| 13     | Epifi Wealth Private Limited                       | Registered Investment Advisor | Live                    |
-| 14     | GoalTeller                                         | Registered Investment Advisor | Live                    |
-| 15     | AU Small Finance Bank Limited                      | Bank                          | Live                    |
-| 16     | Riviera Investors Private Limited                  | NBFC                          | Live                    |
-| 17     | Kotak Bank                                         | Bank                          | Live                    |
-| 18     | Epimoney Private Limited                           | NBFC                          | Live                    |
-| 19     | Navi Finserv Private Limited                       | NBFC                          | Live                    |
-| 20     | Harvinder Finance Company                          | NBFC                          | Live                    |
-| 21     | Finzoom Investment Advisors Private Limited        | Registered Investment Advisor | Live                    |
-| 22     | Snapmint Financial Services Private Limited        | NBFC                          | Live                    |
-| 23     | Piramal Capital & Housing Finance Limited          | NBFC                          | Live                    |
-| 24     | Amica Financial Services                           | Registered Investment Advisor | Live                    |
-| 25     | Payme India                                        | NBFC                          | Live                    |
-| 26     | Policybazaar Insurance Brokers Pvt Ltd             | Insurance web aggregator      | Live                    |
-| 27     | LoanTap Credit Products Private Limited            | NBFC                          | Live                    |
-| 28     | Bajaj Allianz Life Insurance Co. Ltd               | Insurer                       | Live                    |
-| 29     | Small Industries Development Bank of India (SIDBI) | Bank                          | Live                    |
-| 30     | U GRO Capital                                      | NBFC                          | Live                    |
-| 31     | Amros Commercial Private Limited                   | NBFC                          | Live                    |
-| 32     | Vistaar Financial Services Private Limited         | NBFC                          | Live                    |
-| 33     | A&A Dukaan Financial Services Pvt Ltd              | Point of Presence             | Live                    |
-| 34     | Lord Fincap Ltd                                    | NBFC                          | Live                    |
-| 35     | Spenny Fintech Private Limited                     | NBFC                          | Live                    |
-| 36     | Ekagrata Finance Private Limited                   | NBFC                          | Live                    |
-| 37     | Paisabazaar                                        | Registered Investment Advisor | Live                    |
-| 38     | i-Loan Credit Products Private Limited             | NBFC                          | Live                    |
-| 39     | Lunchbrake Technologies Private Limited            | Retirement Adviser            | Live                    |
-| 40     | 121 Finance Private Limited                        | NBFC                          | Live                    |
-| 41     | Gromor Finance Private Limited                     | NBFC                          | Live                    |
-| 42     | Mamta Projects Private Limited                     | NBFC                          | Live                    |
-| 43     | Quadrillion Finance Private Limited                | NBFC                          | Live                    |
-| 44     | NU Investment Pvt. Ltd.                            | Stock Broker                  | Live                    |
-| 45     | Oxyzo Financial Services                           | NBFC                          | Live                    |
-| 46     | RKSV Securities India Pvt Ltd                      | Registered Investment Advisor | Live                    |
-| 47     | Cars24 Financial Services                          | NBFC                          | Live                    |
-| 48     | Tata Capital Financial Services Ltd                | NBFC                          | Live                    |
-| 49     | Neo Opportunities Fund Trust                       | Alternative Investment Fund   | Live                    |
-| 50     | Max Life Insurance                                 | Insurer                       | Live                    |
+- **Live FIPs and FIUs** — You can see all the live FIPs and FIUs on [Sahamati](https://sahamati.org.in/fip-fiu-in-account-aggregators-ecosystem/).
+- **FIP-AA mapping** — You can see the FIP-AA mapping on [Sahamati](https://sahamati.org.in/fip-aa-mapping/).
 
 <hr class="primary" />
 
-### FIPs and FIUs in testing phase
-
-| Sr. No | Entity name                                      | Regulatory Type               | AA implementation stage |
-| ------ | ------------------------------------------------ | ----------------------------- | ----------------------- |
-| 51     | SBI                                              | Bank                          | Testing                 |
-| 52     | Credit Saison                                    | NBFC                          | Testing                 |
-| 53     | NeoGrowth Credit                                 | NBFC                          | Testing                 |
-| 54     | Kairos Capital Private Limited                   | Registered Investment Advisor | Testing                 |
-| 55     | Eduvanz Financing Private Limited                | NBFC                          | Testing                 |
-| 56     | Motilal Oswal Housing Finance Ltd                | NBFC                          | Testing                 |
-| 57     | Bajaj Finserv                                    | NBFC                          | Testing                 |
-| 58     | PrimeInvestor Financial Research Private Limited | Research Analyst              | Testing                 |
-| 59     | Home First Finance Company India Ltd             | NBFC                          | Testing                 |
-| 60     | Agrim Housing Finance                            | NBFC                          | Testing                 |
-| 61     | INDITRADE CAPITAL LTD                            | NBFC                          | Testing                 |
-| 62     | Tata Capital Housing Finance Ltd.                | NBFC                          | Testing                 |
-| 63     | Alphaware Advisory Services Private Limited      | Registered Investment Advisor | Testing                 |
-
-<hr class="primary" />
-
-### FIPs and FIUs in development phase
-
-| Sr. No | Entity name                                   | Regulatory Type               | AA implementation stage |
-| ------ | --------------------------------------------- | ----------------------------- | ----------------------- |
-| 64     | Indian Overseas Bank                          | Bank                          | In-Development          |
-| 65     | EarlySalary Services Private Limited          | NBFC                          | In-Development          |
-| 66     | Punjab and Sind Bank                          | Bank                          | In-Development          |
-| 67     | Nahar Credits Private Limited                 | NBFC                          | In-Development          |
-| 68     | Bank of Maharashtra                           | Bank                          | In-Development          |
-| 69     | Bank of Baroda                                | Bank                          | In-Development          |
-| 70     | 5Paisa Capital Limited                        | Stock Broker                  | In-Development          |
-| 71     | India Post Payments Bank                      | Bank                          | In-Development          |
-| 72     | CapFloat Financial Services Private Limited   | NBFC                          | In-Development          |
-| 73     | Jio Payments Bank                             | Bank                          | In-Development          |
-| 74     | Sai Roshni Capital Private Limited (EZFINANZ) | NBFC                          | In-Development          |
-| 75     | Incred Finance                                | NBFC                          | In-Development          |
-| 76     | ICICI Prudential Life Insurance               | Insurer                       | In-Development          |
-| 77     | Bharti Axa Life Insurance                     | Insurer                       | In-Development          |
-| 78     | TATA AIA Life Insurance                       | Insurer                       | In-Development          |
-| 79     | ICICI Lombard                                 | Insurer                       | In-Development          |
-| 80     | Aegon Life Insurance                          | Insurer                       | In-Development          |
-| 81     | Bharat Financial Inclusion Ltd                | NBFC                          | In-Development          |
-| 82     | Centrum Capital Ltd                           | NBFC                          | In-Development          |
-| 83     | Credit Wise Capital                           | NBFC                          | In-Development          |
-| 84     | Growth Source Financial Technologies          | NBFC                          | In-Development          |
-| 85     | Hero fincorp                                  | NBFC                          | In-Development          |
-| 86     | Inventure Finance Pvt Ltd                     | NBFC                          | In-Development          |
-| 87     | HDFC Life Insurance                           | Insurer                       | In-Development          |
-| 88     | Sigfyn Wealth Management Pvt. Ltd             | Registered Investment Advisor | In-Development          |
-| 89     | Groww                                         | Registered Investment Advisor | In-Development          |
-| 90     | Scripbox                                      | Registered Investment Advisor | In-Development          |
-| 91     | White Oak Capital Management                  | Registered Investment Advisor | In-Development          |
-| 92     | Tapstart Capital Private Limited              | NBFC                          | In-Development          |
-| 93     | City Union Bank                               | Bank                          | In-Development          |
-| 94     | Yes Bank                                      | Bank                          | In-Development          |
-| 95     | Suco Bank                                     | Bank                          | In-Development          |
-| 96     | Aditya Birla Housing Finance                  | NBFC                          | In-Development          |
-| 97     | HDFC Credila Financial Services Limited       | NBFC                          | In-Development          |
-| 98     | Krazybee Service Pvt Limited                  | NBFC                          | In-Development          |
-| 99     | Wortgage Finance Pvt                          | NBFC                          | In-Development          |
-| 100    | Alpha Capital                                 | Registered Investment Advisor | In-Development          |
-| 101    | Axis Finance                                  | NBFC                          | In-Development          |
-| 102    | Finurja                                       | Registered Investment Advisor | In-Development          |
-| 103    | Indian Bank                                   | Bank                          | In-Development          |
-
-<hr class="primary" />
-
-### FIPs and FIUs in evaluation phase
-
-| Sr. No | Entity name                                      | Regulatory Type               | AA implementation stage |
-| ------ | ------------------------------------------------ | ----------------------------- | ----------------------- |
-| 104    | Canara Bank                                      | Bank                          | Evaluating              |
-| 105    | UCO bank                                         | Bank                          | Evaluating              |
-| 106    | Standard Chartered Bank                          | Bank                          | Evaluating              |
-| 107    | Deutsche Bank AG                                 | Bank                          | Evaluating              |
-| 108    | Punjab National Bank                             | Bank                          | Evaluating              |
-| 109    | Central Bank of India                            | Bank                          | Evaluating              |
-| 110    | Bandhan Bank                                     | Bank                          | Evaluating              |
-| 111    | Bank of India                                    | Bank                          | Evaluating              |
-| 112    | Citibank                                         | Bank                          | Evaluating              |
-| 113    | DBS Bank                                         | Bank                          | Evaluating              |
-| 114    | DCB Bank                                         | Bank                          | Evaluating              |
-| 115    | ESAF Small Finance Bank                          | Bank                          | Evaluating              |
-| 116    | Fincare Small Finance Bank                       | Bank                          | Evaluating              |
-| 117    | HSBC Bank                                        | Bank                          | Evaluating              |
-| 118    | IDBI Bank                                        | Bank                          | Evaluating              |
-| 119    | Karnataka Bank                                   | Bank                          | Evaluating              |
-| 120    | SBM Bank India                                   | Bank                          | Evaluating              |
-| 121    | South Indian Bank                                | Bank                          | Evaluating              |
-| 122    | Utkarsh Small Finance Bank                       | Bank                          | Evaluating              |
-| 123    | Aditya Birla Sun Life Insurance Ltd              | Insurer                       | Evaluating              |
-| 124    | PNB Metlife India Assurance Co. Ltd.             | Insurer                       | Evaluating              |
-| 125    | Godrej Housing Finance                           | NBFC                          | Evaluating              |
-| 126    | Sundaram Finance                                 | NBFC                          | Evaluating              |
-| 127    | ICICI Securities                                 | Stock Broker                  | Evaluating              |
-| 128    | ASK Investment Managers Limited                  | Portfolio Managers            | Evaluating              |
-| 129    | ASK Financial Holdings Pvt Ltd                   | NBFC                          | Evaluating              |
-| 130    | ASK Property Investment Advisors Private Limited | Portfolio Managers            | Evaluating              |
-| 131    | ASK Wealth Advisors Private Limited              | Registered Investment Advisor | Evaluating              |
-| 132    | Future Generali India Insurance Company Ltd      | Insurer                       | Evaluating              |
-| 133    | Edelweiss Financial Services Limited             | Registered Investment Advisor | Evaluating              |
-| 134    | Fullerton India Credit Co. Ltd.                  | NBFC                          | Evaluating              |
-| 135    | Northern Arc Capital                             | NBFC                          | Evaluating              |
-| 136    | Prathama UP Gramin Bank                          | Bank                          | Evaluating              |
-| 137    | Karnataka Vikas Gramin Bank                      | Insurer                       | Evaluating              |
-| 138    | Andhra Pradesh Gramin Vikas Bank                 | Bank                          | Evaluating              |
-| 139    | HDFC Ltd                                         | NBFC                          | Evaluating              |
-| 140    | Baroda Gujarat Gramin Bank                       | Bank                          | Evaluating              |
-| 141    | Creditenable                                     | NBFC                          | Evaluating              |
-| 142    | Kerala Gramin Bank                               | Bank                          | Evaluating              |
-| 143    | Edelweiss Tokio life insurance                   | Insurer                       | Evaluating              |
-| 144    | Gujarat State Cooperative Bank                   | Bank                          | Evaluating              |
-| 145    | Angel Broking                                    | Stock Broker                  | Evaluating              |
-| 146    | Telangana State Cooperative Bank                 | Bank                          | Evaluating              |
-| 147    | Jana Small Finance Bank                          | Bank                          | Evaluating              |
-| 148    | Kerala State Cooperative Bank                    | Bank                          | Evaluating              |
-| 149    | Equitas Bank                                     | Bank                          | Evaluating              |
-| 150    | Maharashtra State Cooperative Bank               | Bank                          | Evaluating              |
-| 151    | RBL Bank Limited                                 | Bank                          | Evaluating              |
-| 152    | Punjab State Cooperative Bank                    | Bank                          | Evaluating              |
-| 153    | HDFC Ergo                                        | Insurer                       | Evaluating              |
-| 154    | Tata Securities Ltd.                             | Stock Broker                  | Evaluating              |
-| 155    | Poonawalla Fincorp                               | NBFC                          | Evaluating              |
-| 156    | Star Union Daichi Life Insurance                 | Insurer                       | Evaluating              |
-| 157    | True Credits Private Limited                     | NBFC                          | Evaluating              |
-
-<hr class="primary" />
-
-### Become an FIU with Setu
+#### Become an FIU with Setu
 
 Setu is a TSP that can help you become an FIU and participate in the Account Aggregator ecosystem.
 
@@ -210,12 +26,6 @@ Setu is a TSP that can help you become an FIU and participate in the Account Agg
     BECOME AN FIU ↗
   </Button>
 </Element>
-
-<hr class="primary" />
-
-**Last updated on 17 June 2022**
-
-Information source—<a href="https://sahamati.org.in/fip-fiu-in-account-aggregators-ecosystem/" target="_blank">Sahamati</a>
 
 <NextPage
   info={{
